2004-11-11  Derek Price  <derek@ximbiot.com>

	* Makefile.in (DISTFILES): Update for zlib 1.2.1.

2004-11-11  Derek Price  <derek@ximbiot.com>

	* Makefile.in (clean): Don't remove Windows build files.

2004-10-27  Mark D. Baushke  <mdb@cvshome.org>

	* infback.c (out_desc): Security Bugfixes (CAN-2004-0797,
	OpenPKG-SA-2004.038-zlib).
	* inflate.c (inflate): Ditto.

2004-10-21  Conrad T. Pino  <Conrad@Pino.com>

	* libz.dsp: Add "crc32.h" and "inflate.h" to project.
	Remove "infblock.c", "infblock.h", "infcodes.c", "infcodes.h",
	"infutil.c", and "infutil.h" from project.
	* libz.dep: Regenerated for "libz.dsp" changes.
	* libz.mak: Regenerated for "libz.dsp" changes.

2004-10-21  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Merge changes from zlib 1.2.1.
	* Make_vms.com, Makefile.riscos, descrip.mms, infblock.c, infblock.h,
	infcodes.c, infcodes.h, infutil.c, infutil.h, maketree.c, zlib.html,
	contrib/asm386/gvmat32.asm, contrib/asm386/gvmat32c.c,
	contrib/asm386/mkgvmt32.bat, contrib/asm386/zlibvc.def,
	contrib/asm386/zlibvc.dsp, contrib/asm386/zlibvc.dsw,
	contrib/delphi/zlib.mak, contrib/delphi/zlibdef.pas,
	contrib/delphi2/d_zlib.bpr, contrib/delphi2/d_zlib.cpp,
	contrib/delphi2/readme.txt, contrib/delphi2/zlib.bpg,
	contrib/delphi2/zlib.bpr, contrib/delphi2/zlib.cpp,
	contrib/delphi2/zlib.pas, contrib/delphi2/zlib32.bpr,
	contrib/delphi2/zlib32.cpp, contrib/minizip/readme.txt,
	contrib/minizip/unzip.def, contrib/minizip/zip.def,
	contrib/minizip/zlibvc.def, contrib/minizip/zlibvc.dsp,
	contrib/minizip/zlibvc.dsw, contrib/untgz/makefile.w32,
	msdos/Makefile.b32, msdos/Makefile.w32, msdos/Makefile.wat,
	msdos/zlib.def, msdos/zlib.rc, nt/Makefile.emx, nt/Makefile.gcc,
	nt/Makefile.nt, nt/zlib.dnt, os2/Makefile.os2, os2/zlib.def: Merge file
	removals from zlib 1.2.1.

2004-10-05  Conrad T. Pino  <Conrad@Pino.com>

	* libz.mak: Regenerated for "../cvsnt.dsp" and "../lib/libcvs.dsp"
	changes made 2004-10-05.

2004-09-09  Conrad T. Pino  <Conrad@Pino.com>
